public/main.css
* {
    box-sizing: border-box;
}

body {
    font-size: 10px;
    font-family: Tahoma, Arial;
}

nav {
    width: 100%;
    background-color: #4d5791;
    height: 44px;
    padding: 0 40px;
}

nav ul,
nav ul li {
    margin: 0;
    padding: 0 ;
    list-style: none;
    display: inline-block;
}

nav ul li a {
    display: block;
    padding: 0 20px;
    line-height: 44px;
    font-size: 1.4em;
    text-decoration: none;
    color: #fff;
    margin: 0;
}

nav ul li a:hover  {
    background-color: white;
    color: #4d5791;
}

header.hero {
    height: 350px;
    background-color: #b4c6f0;
    background-size: 400px;
    background-repeat: no-repeat;
    background-position: center bottom;
    padding-top: 40px;
}

header.hero h1,
header.hero h2 {
    text-align: center;
    margin: 0;
}

header.hero h1 {
    /* <!-- This is an A11y Change --> */
    color: #0000ff;
    font-size: 4.2em;
    margin-bottom: 20px;
}

header.hero h2 {
    color: #4d5791;
}

main {
    padding: 40px;
    width: 100%;
}

.page-area {
    max-width: 768px;
    display: inline-block;
}

footer {
    height: 50px;
    background-color: #b4c6f0;
    padding: 40px;
}

.skip {
    display: block;
    line-height: 44px;
    padding: 0 20px;
    margin-top: -44px;
}

.skip:focus {
    margin-top: 0;
}

.center {
    text-align: center;
}

main article {
    display: inline-block;
    width: 100%;
    max-width: 340px;
    text-align: justify;
    margin: 20px;
}

@media screen and (min-width: 768px) {
    main article {
        margin: 10px;
    }
}

/*Donut Pie Chart*/
path.slice {
	stroke-width:2px;
}

polyline {
	opacity: .3;
	stroke: black;
	stroke-width: 2px;
	fill: none;
}

